Cleaned up boxing warnings.
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@8057 b64ed6c1-75a8-e629-b1da-d0dae74a743a